# quadrotor_mpc_

./: README.md
quadrotor_mpc/: CMakeLists.txt  package.xml
quadrotor_mpc/config/: mpc_para.yaml
quadrotor_mpc/include/uav_mpc/: mpc_wrapper.h  ros_mission.h
quadrotor_mpc/launch/: rospub  run_control.launch
quadrotor_mpc/model/: mpc_test  mpc_test.cpp  ref.txt
quadrotor_mpc/model/quadrotor_mpc_codegen/: acado_common.h  acado_integrator.c  acado_qpoases_interface.cpp  acado_solver.c  test  test.c
quadrotor_mpc/src/: mpc_node.cpp  mpc_wrapper.cpp  ros_mission.cpp
quadrotor_msgs/: CMakeLists.txt  package.xml
quadrotor_msgs/msg/: mpc_ref_point.msg  mpc_ref_traj.msg
quadrotor_traj_tools/: CMakeLists.txt  package.xml
quadrotor_traj_tools/include/: traj_min_jerk.hpp
quadrotor_traj_tools/launch/: example1.launch
quadrotor_traj_tools/src/: example1_node.cpp
