<?xml version="1.0"?>
<package>
  <name>quadrotor_msgs</name>
  <version>1.1.5</version>
  <description>quadrotor_msgs.</description>
  <maintainer email="minghao0@connect.hku.hk">Michael</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/arclab</url>
  <author email="minghao0@connect.hku.hk">Michael</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
